<resources>
    <string name="app_name">Final Android Jetpack</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_detail_course">Detail Course</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="dateline">Dateline</string>
    <string name="description_module">Deskripsi Modul</string>
    <string name="example">Example</string>
    <string name="start_learn">Mulai Belajar</string>
    <string name="list_module">Daftar Modul</string>
    <string name="home">Home</string>
    <string name="bookmark">Bookmark</string>
    <string name="menu_bookmark">bookmark</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="last_seen">Terakhir dilihat</string>
    <string name="message_undo">Batalkan menghapus item sebelumnya?</string>
    <string name="message_ok">OK</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_show">TV Show</string>
    <string name="movie">Movie</string>
    <string name="favorite">Favorite</string>
    <string name="tab_text_1">Movies</string>
    <string name="tab_text_2">TV Shows</string>
    <string name="language">Language :&#160;</string>
    <string name="genre">Genre :&#160;</string>
    <string name="type">Type :&#160;</string>
    <string name="please_wait">Please wait…</string>
    <string name="backdrop_image">Backdrop Image</string>
    <string name="poster_image">Poster Image</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="empty">Empty</string>
    <string name="bookmarked">Bookmarked</string>
    <string name="something_wrong_happened">Something wrong happened</string>
</resources>
