<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                     xmlns:tools="http://schemas.android.com/tools"
                                                     xmlns:app="http://schemas.android.com/apk/res-auto"
                                                     android:orientation="vertical"
                                                     android:layout_width="match_parent"
                                                     android:layout_height="match_parent">
    <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/app_bar_height"
            android:id="@+id/appBarLayout"
            android:background="@color/colorPrimary"
            android:theme="@style/Widget.Design.AppBarLayout">
        <com.google.android.material.appbar.CollapsingToolbarLayout
                android:background="@color/colorPrimary"
                android:id="@+id/collapsingToolbarLayout"
                android:fitsSystemWindows="true"
                app:collapsedTitleTextAppearance="@android:color/white"
                app:expandedTitleTextAppearance="@android:color/white"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:contentScrim="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">
            <ImageView
                    android:contentDescription="@string/backdrop_image"
                    android:id="@+id/imageBackdrop"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:src="@android:drawable/picture_frame"
                    android:fitsSystemWindows="true"
                    android:scaleType="centerCrop"
                    app:layout_collapseMode="parallax"/>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:padding="16dp"
                    android:maxLines="3"
                    android:ellipsize="end"
                    android:id="@+id/txtTitleHeader"
                    android:background="@drawable/background_gradient"
                    android:textColor="@android:color/white"
                    app:layout_collapseMode="parallax"
                    android:layout_gravity="bottom"
                    tools:text="@tools:sample/lorem/random"/>
            <androidx.appcompat.widget.Toolbar
                    android:layout_width="match_parent"
                    android:layout_height="?actionBarSize"
                    android:id="@+id/toolbar"
                    tools:title="The Avenger - Endgame"
                    app:titleTextColor="@android:color/white"
                    app:subtitleTextColor="@android:color/white"
                    app:layout_collapseMode="pin"
                    android:contentInsetLeft="0dp"
                    android:contentInsetStart="0dp"
                    app:contentInsetLeft="0dp"
                    app:contentInsetStart="0dp"
                    android:contentInsetRight="0dp"
                    android:contentInsetEnd="0dp"
                    app:contentInsetRight="0dp"
                    app:contentInsetEnd="0dp"
                    android:background="@color/colorPrimary"
                    app:navigationIcon="@drawable/ic_back">
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:padding="16dp"
                        android:background="@color/colorPrimary"
                        android:id="@+id/txtTitleToolbar"
                        android:textColor="@android:color/white"
                        tools:text="@tools:sample/lorem/random"/>
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>
    <androidx.core.widget.NestedScrollView
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp">
            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                          android:orientation="horizontal"
                          android:gravity="center">
                <ImageView
                        android:contentDescription="@string/poster_image"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:id="@+id/imagePoster"
                        android:layout_marginEnd="8dp"
                        android:adjustViewBounds="true"
                        android:src="@android:drawable/ic_menu_gallery"/>
                <LinearLayout
                        android:layout_marginStart="8dp"
                        android:layout_width="0dp" android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:layout_gravity="top"
                        android:orientation="vertical"
                        android:gravity="top|start">
                    <LinearLayout
                            android:layout_marginTop="8dp"
                            android:layout_width="match_parent" android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:gravity="center_vertical|start">
                        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"
                                   android:src="@drawable/ic_star"
                                   android:tint="@color/yellowStar"/>
                        <TextView android:layout_width="0dp" android:layout_height="wrap_content"
                                  android:layout_weight="1"
                                  android:textColor="@color/textColor"
                                  android:id="@+id/txtRate"
                                  android:layout_marginEnd="8dp"
                                  android:layout_marginStart="4dp"
                                  android:textSize="16sp"
                                  tools:text="7.5"/>
                    </LinearLayout>
                    <LinearLayout
                            android:layout_marginTop="8dp"
                            android:layout_width="match_parent" android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:gravity="center_vertical|start">
                        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"
                                   android:src="@drawable/ic_calendar"
                                   android:tint="@color/colorAccent"/>
                        <TextView android:layout_width="0dp" android:layout_height="wrap_content"
                                  android:layout_weight="1"
                                  android:textColor="@color/textColor"
                                  android:id="@+id/txtDate"
                                  android:layout_marginEnd="8dp"
                                  android:layout_marginStart="4dp"
                                  android:textSize="16sp"
                                  tools:text="2019-07-04"/>
                    </LinearLayout>
                    <TextView android:layout_width="wrap_content"
                              android:layout_marginTop="8dp"
                              android:layout_height="wrap_content"
                              android:textColor="@color/textColor"
                              android:layout_marginEnd="4dp"
                              android:id="@+id/txtLanguage"
                              android:textSize="16sp"
                              android:text="@string/language"/>
                    <TextView
                            android:layout_marginTop="8dp"
                            android:textColor="@color/textColor"
                            android:text="@string/genre"
                            android:textSize="16sp"
                            android:id="@+id/txtGenre"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    <TextView
                            android:layout_marginTop="8dp"
                            android:textColor="@color/textColor"
                            android:text="@string/type"
                            android:id="@+id/txtType"
                            android:textSize="16sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="wrap_content"
                            android:gravity="center"
                            android:paddingStart="16dp"
                            android:paddingEnd="16dp"
                            android:paddingTop="8dp"
                            android:paddingBottom="8dp"
                            android:layout_marginTop="8dp"
                            tools:background="@drawable/bg_button_bookmark"
                            android:id="@+id/layoutBookmark"
                            android:layout_height="wrap_content">
                        <TextView
                                android:textColor="@color/textColor"
                                tools:text="@string/bookmark"
                                android:textStyle="bold"
                                android:id="@+id/txtBookmark"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>
                        <ImageView
                                android:id="@+id/imgBookmark"
                                android:tint="@color/colorAccent"
                                android:src="@drawable/ic_check"
                                tools:visibility="gone"
                                android:layout_width="wrap_content" android:layout_height="wrap_content"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
            <TextView
                    android:textSize="16sp"
                    android:textColor="@color/textColor"
                    tools:text="@tools:sample/lorem/random"
                    android:id="@+id/txtOverview"
                    android:layout_width="match_parent" android:layout_height="wrap_content"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>